Update URLs to point to personal repository (ranyafazai/healthconnect)

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourteam-dev.github.io/HealthyConnect/">
+    <meta property="og:url" content="https://ranyafazai.github.io/healthconnect/">
     <meta property="og:title" content="HealthyConnect - Telehealth Platform">
     <meta property="og:description" content="HealthyConnect is a full-stack telehealth platform that enables seamless communication between Patients and Doctors through text or video consultations.">
-    <meta property="og:image" content="https://yourteam-dev.github.io/HealthyConnect/healthconnect-favicon.svg">
+    <meta property="og:image" content="https://ranyafazai.github.io/healthconnect/healthconnect-favicon.svg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yourteam-dev.github.io/HealthyConnect/">
+    <meta property="twitter:url" content="https://ranyafazai.github.io/healthconnect/">
     <meta property="twitter:title" content="HealthyConnect - Telehealth Platform">
     <meta property="twitter:description" content="HealthyConnect is a full-stack telehealth platform that enables seamless communication between Patients and Doctors through text or video consultations.">
-    <meta property="twitter:image" content="https://yourteam-dev.github.io/HealthyConnect/healthconnect-favicon.svg">
+    <meta property="twitter:image" content="https://ranyafazai.github.io/healthconnect/healthconnect-favicon.svg">
 
     <style>
         body {
